--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
     <header class="revolut-header">
         <div class="revolut-logo">
             <img src="Revolut-Logo.wine.png" alt="Revolut" class="revolut-logo-img">
-            <span class="revolut-logo-text">revolut.</span>
+            <span class="revolut-logo-text"></span>
         </div>
     </header>
 
